Updating plotting code and utilities for plotting/analysis

--- a/notebooks/testing/test_gabor_feat_ext.ipynb
+++ b/notebooks/testing/test_gabor_feat_ext.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "82fc19ab",
+   "execution_count": null,
+   "id": "0b76cb27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#device: 1\n",
-      "device#: 0\n",
-      "device name: GeForce GTX TITAN X\n",
-      "\n",
-      "torch: 1.8.1+cu111\n",
-      "cuda:  11.1\n",
-      "cudnn: 8005\n",
-      "dtype: torch.float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import argparse\n",
     "import numpy as np\n",
@@ -43,8 +28,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "54c24ef4",
+   "execution_count": 14,
+   "id": "bc94d700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "prf_batch_size=100\n",
+    "n_prfs=875\n",
+    "n_prf_batches = int(np.ceil(n_prfs/prf_batch_size))\n",
+    "prf_inds_loaded = []\n",
+    "prf_batch_inds = [np.arange(prf_batch_size*bb, np.min([prf_batch_size*(bb+1), n_prfs])) for \\\n",
+    "                  bb in range(n_prf_batches)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bedef9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prf_inds_loaded = prf_batch_inds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6c7b4c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prf_model_index = 150\n",
+    "batch_to_use = np.where([prf_model_index in prf_batch_inds[bb] for bb in range(len(prf_batch_inds))])[0][0]\n",
+    "assert(prf_model_index in prf_batch_inds[batch_to_use])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "22882521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(prf_batch_inds[1]==prf_model_index)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "740a3fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +102,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "99ff3540",
+   "execution_count": 22,
+   "id": "753722a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "out = torch.load('/user_data/mmhender/imStat/model_fits/S01/texture_gabor_ridge_4ori_4sf_plus_sketch_tokens/Sep-20-2021_1412_25_DEBUG/all_fit_params')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "17d0540d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['subject', 'volume_space', 'fitting_type', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'models', 'n_prf_sd_out', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'pc', 'min_pct_var', 'max_pc_to_retain', 'mult_patch_by_prf', 'map_resolution', 'do_avg_pool', 'feature_table_simple', 'filter_pars_simple', 'orient_filters_simple', 'feature_table_complex', 'filter_pars_complex', 'orient_filters_complex', 'feature_types_exclude', 'feature_info', 'nonlin_fn', 'padding_mode', 'autocorr_output_pix', 'group_all_hl_feats'])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "cae4ae48",
    "metadata": {},
    "outputs": [
     {
@@ -87,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "24eb276a",
+   "execution_count": 48,
+   "id": "f44e9cf7",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "98ca3f61",
+   "id": "0d22b0f2",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0c14b236",
+   "id": "4c1607c6",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0ffb24bc",
+   "id": "14b29c93",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4dacaa3b",
+   "id": "e4689df8",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "36b1cbb0",
+   "id": "1ae52db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "580a991a",
+   "id": "45d345d8",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c767a41a",
+   "id": "276567b4",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "44617d9a",
+   "id": "bd65f93f",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8c163071",
+   "id": "7afa9695",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "239b16da",
+   "id": "c3c6af0f",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b4b5c837",
+   "id": "759c6ace",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f6cb87f3",
+   "id": "b5eca042",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3d9df9f3",
+   "id": "ceb67482",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6281186f",
+   "id": "ef49fc76",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d99f94a0",
+   "id": "987ffa24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8b25d36e",
+   "id": "0260ced8",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d793537",
+   "id": "b6c80f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e98e6d5e",
+   "id": "b46fe40b",
    "metadata": {},
    "outputs": [],
    "source": [
