--- a/notebooks/testing/texture_model_fitting.ipynb
+++ b/notebooks/testing/texture_model_fitting.ipynb
@@ -1858,7 +1858,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1872,7 +1872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
