testing code for preventing huge pixel stat values

--- a/notebooks/testing/texture_model_fitting.ipynb
+++ b/notebooks/testing/texture_model_fitting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80d4ee68",
+   "id": "b77fe639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4b25d96a",
+   "id": "1a3e04cb",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b1db7a5",
+   "id": "8aed82ae",
    "metadata": {
     "tags": []
    },
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "2cca1efe",
+   "id": "3809bff3",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "8fbe8af9",
+   "id": "8038a0bc",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "70c3b91e",
+   "id": "ffb41320",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "8696881a",
+   "id": "272a8f97",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "8b212dd5",
+   "id": "48f579b1",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "62c8a3ad",
+   "id": "8f964093",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2f8b6aac",
+   "id": "260a5729",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d42527fb",
+   "id": "d7f22fe8",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "4494b162",
+   "id": "2a533592",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "af1b0a3a",
+   "id": "58787671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "212812ee",
+   "id": "37594054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "fd0d4472",
+   "id": "d09c1853",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "3591e4af",
+   "id": "69c67dd4",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "9f32213b",
+   "id": "b26b64c4",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "42197995",
+   "id": "b9b07a1e",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "37d8aad7",
+   "id": "aa8bac91",
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "42cdfd1b",
+   "id": "6aa5c4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "d719daca",
+   "id": "b8eb2243",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0a90a86c",
+   "id": "34378609",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "be90532d",
+   "id": "99bb48cf",
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "de561ce4",
+   "id": "105f08a2",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1872,7 +1872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
