updating some plotting code for stacking model

--- a/notebooks/plot_results/plot_pyramid_texture_model.ipynb
+++ b/notebooks/plot_results/plot_pyramid_texture_model.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9d436aea",
+   "execution_count": 15,
+   "id": "a1e2cbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ac319116",
+   "execution_count": 16,
+   "id": "4a7122e1",
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +90,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "4b757138",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "501622"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['shuff_rnd_seed']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "40580113",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "943"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmin(out['val_r2'][:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a367767b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vind = 943"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d3825d4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.739661e+16"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['val_r2'][vind,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bf27890a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2026315789473685, 0.4342105263157895, 0.03999999910593033)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x,y,sigma = out['best_params'][0][vind,0,:]\n",
+    "x,y,sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eccb0b08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "353"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mind = out['best_params'][5][vind,0]\n",
+    "mind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3a2dc897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.01358995, -0.00102019,  0.03897677,  0.04457061, -0.02278942,\n",
+       "        0.01617156, -0.0212505 ,  0.01503736, -0.01999819, -0.0360194 ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_params'][1][vind,0:10,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "a5c9eb71",
+   "id": "eae06188",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e743c25",
+   "id": "1382d5df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7fb59090",
+   "id": "5a2509a1",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d1b37d71",
+   "id": "a859893c",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d144fda3",
+   "id": "86463541",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4d6ca604",
+   "id": "3a950275",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "82821541",
+   "id": "24a3f549",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "968cb174",
+   "id": "6b5f5346",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1737a618",
+   "id": "5866206e",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5d826b3f",
+   "id": "3896e773",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0ea98aea",
+   "id": "286a774c",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "867e0df7",
+   "id": "ca988963",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d6997ba5",
+   "id": "ab3f5f6f",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "94ac6dc8",
+   "id": "255a53bf",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a8406a55",
+   "id": "5e26ab92",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "69179731",
+   "id": "36235274",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c789de4b",
+   "id": "b48a2eba",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "286ead4d",
+   "id": "a926beda",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e2d2b8e0",
+   "id": "8f94bd15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -675,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "65b7a3b9",
+   "id": "e732bd8a",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3684bb68",
+   "id": "f39e7ff7",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bd359ae6",
+   "id": "f862d655",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e20df4c4",
+   "id": "a39f0464",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bae20b2f",
+   "id": "123986d7",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aad425b9",
+   "id": "b9d2a063",
    "metadata": {},
    "outputs": [
     {
