--- a/notebooks/plot_results/plot_pyramid_texture_pca.ipynb
+++ b/notebooks/plot_results/plot_pyramid_texture_pca.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "00c4ed91",
+   "id": "4286a7e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "55c6df06",
+   "id": "0fd44292",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/user_data/mmhender/features/pyramid_texture/PCA/S1_4ori_4sf_PCA_higher-level_only.npy\n"
+     ]
+    },
     {
      "ename": "EOFError",
      "evalue": "Ran out of input",
@@ -32,7 +39,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-5ada9188f8ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msubject\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfn2load\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdefault_paths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyramid_texture_feat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'PCA'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'S%d_4ori_4sf_PCA_higher-level_only.npy'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0msubject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpc_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn2load\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mscores_each_prf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpc_result\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'scores'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-ed43daeb5b82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfn2load\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdefault_paths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyramid_texture_feat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'PCA'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'S%d_4ori_4sf_PCA_higher-level_only.npy'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0msubject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn2load\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpc_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn2load\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mscores_each_prf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpc_result\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'scores'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/myenv/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    439\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    440\u001b[0m                 return format.read_array(fid, allow_pickle=allow_pickle,\n\u001b[0;32m--> 441\u001b[0;31m                                          pickle_kwargs=pickle_kwargs)\n\u001b[0m\u001b[1;32m    442\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    443\u001b[0m             \u001b[0;31m# Try a pickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/myenv/lib/python3.7/site-packages/numpy/lib/format.py\u001b[0m in \u001b[0;36mread_array\u001b[0;34m(fp, allow_pickle, pickle_kwargs)\u001b[0m\n\u001b[1;32m    746\u001b[0m             \u001b[0mpickle_kwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    747\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 748\u001b[0;31m             \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mpickle_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    749\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mUnicodeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    750\u001b[0m             \u001b[0;31m# Friendlier error message\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
@@ -42,6 +49,7 @@
    "source": [
     "subject = 1;\n",
     "fn2load = os.path.join(default_paths.pyramid_texture_feat_path, 'PCA','S%d_4ori_4sf_PCA_higher-level_only.npy'%subject)\n",
+    "print(fn2load)\n",
     "pc_result = np.load(fn2load, allow_pickle=True).item()\n",
     "\n",
     "scores_each_prf = pc_result['scores']\n",
@@ -52,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9a515b0f",
+   "id": "4f8ea389",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b8589580",
+   "id": "c3221b3b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d9867750",
+   "id": "a5ace17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dc5c8008",
+   "id": "b1d63c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bdde3f51",
+   "id": "3bac6cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "874ded40",
+   "id": "77aa4083",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e73e6899",
+   "id": "439acd90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "70728c53",
+   "id": "62cd6074",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "d00946d8",
+   "id": "33240ea6",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "2558a764",
+   "id": "05d316c8",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0b106e4e",
+   "id": "f17207fc",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8f4f399c",
+   "id": "515a3585",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "23319c78",
+   "id": "e1236619",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "359f9e5a",
+   "id": "36747b60",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "47c54e7a",
+   "id": "38e7336e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "a8219dca",
+   "id": "43537e56",
    "metadata": {},
    "outputs": [
     {
