Adding method to load pre-computed PCA or LDA subspaces of sketch tokens features

--- a/notebooks/pca_analysis/test_linear_discr.ipynb
+++ b/notebooks/pca_analysis/test_linear_discr.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "369894a0",
+   "execution_count": 155,
+   "id": "f9457160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fa9a7ffd",
+   "id": "5f697212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4918c0e9",
-   "metadata": {},
+   "id": "eb7c8ada",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0b9d3f35",
+   "id": "fe62d0ac",
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +101,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9bda9d97",
-   "metadata": {},
+   "id": "4984d18f",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -157,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "1693656f",
+   "id": "804af284",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "98e20b05",
+   "id": "d9a6e0c8",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3fdd15a7",
+   "id": "65a61cff",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "a4066291",
+   "id": "fa1bc166",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "96d8afda",
+   "id": "11c26b46",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8deaf124",
+   "id": "d5caee32",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d09f2b0f",
+   "id": "85237cd2",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "baf0ff75",
+   "id": "a0007642",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "14d2b5c3",
+   "id": "e6277a0c",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4f10b0b5",
+   "id": "79676e1c",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "92868889",
+   "id": "c90c8759",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "4ee69edb",
+   "id": "09859038",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "b13a7d49",
+   "id": "af407a34",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "dd41f47f",
+   "id": "04826065",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "076db7ba",
+   "id": "fc816ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "6d59b73c",
+   "id": "28432b04",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "ae4f4675",
+   "id": "0d4aa9b9",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "b0503bff",
+   "id": "7922630d",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "50150989",
+   "id": "7ec96132",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "a15087cc",
+   "id": "03f8d214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "629fdcf5",
+   "id": "e73299d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "bb3052bf",
+   "id": "c93f66d0",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "4808fa94",
+   "id": "1b0299f5",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "73dfa483",
+   "id": "ef01685a",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0e77d764",
+   "id": "cf88582b",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "68d4bde2",
+   "id": "d28f6ba0",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ab59a9e3",
+   "id": "b10c2b96",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "05914b49",
+   "id": "3d832eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4fd754e2",
+   "id": "fd282d86",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04364116",
+   "id": "fd1ccc53",
    "metadata": {},
    "outputs": [],
    "source": []
