updates to a few notebooks

--- a/notebooks/plot_results/plot_full_midlevel_model.ipynb
+++ b/notebooks/plot_results/plot_full_midlevel_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9e0e3a8f",
+   "id": "58763f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7523a2ac",
+   "id": "fbefbac8",
    "metadata": {},
    "outputs": [
     {
@@ -99,51 +99,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "15ed83aa",
+   "execution_count": 10,
+   "id": "58398315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_models_each_voxel = out['best_params'][5][:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0d18d8ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([780, 872, 851, ..., 732, 766, 119])"
+       "(14900,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out['best_params'][5][:,0]"
+    "np.where(best_models_each_voxel)[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "689ae5f1",
+   "execution_count": 30,
+   "id": "86b70797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voxels_to_fit = np.where(best_models_each_voxel==697)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "38ce7579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voxels_to_fit = np.arange(0,22)\n",
+    "voxel_batch_size=7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fcce4a89",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'out1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-139f30126a0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mout1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'voxel_roi'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'out1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6]\n",
+      "[  21 1199 1244 1488 1616 3008 3147]\n",
+      "[ 7  8  9 10 11 12 13]\n",
+      "[3487 3613 3828 4075 4257 4328 4428]\n",
+      "[14 15 16 17 18 19 20]\n",
+      "[4698 4719 4720 4752 4774 5087 5690]\n",
+      "[21 22 23 24 25 26 27]\n",
+      "[ 5816  6410  7153 10294 10774 11246 11913]\n",
+      "[28 29]\n",
+      "[12850 14435]\n"
      ]
     }
    ],
    "source": [
-    "out1['voxel_roi'][0]"
+    "n_voxels_to_fit = len(voxels_to_fit)            \n",
+    "n_batches = int(np.ceil(n_voxels_to_fit/voxel_batch_size))\n",
+    "\n",
+    "for vi in range(n_batches):\n",
+    "\n",
+    "    vinds = np.arange(voxel_batch_size*vi, np.min([voxel_batch_size*(vi+1), n_voxels_to_fit]))\n",
+    "    rv = voxels_to_fit[vinds]\n",
+    "    lv = len(vinds)\n",
+    "\n",
+    "#     sys.stdout.write('\\rfitting model %4d of %-4d, voxel batch %d of %d'%(0, 0, vi, n_batches))\n",
+    "    print(vinds)\n",
+    "    print(rv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "53e88890",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   21,  1199,  1244,  1488,  1616,  3008,  3147,  3487,  3613,\n",
+       "        3828,  4075,  4257,  4328,  4428,  4698,  4719,  4720,  4752,\n",
+       "        4774,  5087,  5690,  5816,  6410,  7153, 10294, 10774, 11246,\n",
+       "       11913, 12850, 14435])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voxels_to_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e3b99bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp = np.ones((lv,))==1\n",
+    "imp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "85003370",
+   "id": "0d5f7407",
    "metadata": {
     "tags": []
    },
@@ -166,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1cf0f96f",
+   "id": "30e788ca",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9cbc4e0a",
+   "id": "240c569e",
    "metadata": {
     "tags": []
    },
@@ -228,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34374344",
+   "id": "9577234b",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "67d88e9b",
+   "id": "366abb2c",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "25130035",
+   "id": "384a0ea3",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "661ddd01",
+   "id": "3a1ad6f7",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "49fdd42d",
+   "id": "12670a52",
    "metadata": {
     "tags": []
    },
@@ -384,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2b7f23ed",
+   "id": "ce04d650",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "38ec7363",
+   "id": "8a371310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec61ad7f",
+   "id": "a23e3bd8",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "779c3a02",
+   "id": "78030829",
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ce3b9245",
+   "id": "62ccfbda",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "600a7f52",
+   "id": "e39964f1",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0bf20b8b",
+   "id": "b011a61b",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "579138b3",
+   "id": "068db74c",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "118faaa2",
+   "id": "ee866e76",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fe0e67eb",
+   "id": "920b9cab",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0447158c",
+   "id": "f3e6a8d8",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ef3d6e87",
+   "id": "48fbbb78",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4ce76cf0",
+   "id": "4290ea40",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4beda4f7",
+   "id": "645628e4",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "927a248c",
+   "id": "686d9ac8",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e33ebc87",
+   "id": "413e564b",
    "metadata": {},
    "outputs": [
     {
