--- a/notebooks/plot_results/plot_full_midlevel_model.ipynb
+++ b/notebooks/plot_results/plot_full_midlevel_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "58763f67",
+   "id": "f96fe321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
     "import torch \n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "sys.path.append(os.path.join(root, 'code'))\n",
-    "from plotting_and_analysis import plot_utils, summary_plots, spatial_fits, analysis_utils\n",
+    "from plotting import plot_utils, summary_plots, spatial_fits, analysis_utils\n",
     "plot_utils.set_plotting_defaults()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fbefbac8",
+   "id": "763a8136",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "58398315",
+   "id": "5da90a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0d18d8ac",
+   "id": "31d9fb52",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "86b70797",
+   "id": "a02df2aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "38ce7579",
+   "id": "caba8bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fcce4a89",
+   "id": "86913bf8",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "53e88890",
+   "id": "eca4aef2",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e3b99bc7",
+   "id": "ce275f70",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0d5f7407",
+   "id": "6a809a8b",
    "metadata": {
     "tags": []
    },
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30e788ca",
+   "id": "a1a6fa3c",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "240c569e",
+   "id": "1aed72b9",
    "metadata": {
     "tags": []
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9577234b",
+   "id": "87a7b569",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "366abb2c",
+   "id": "2c2d6b49",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "384a0ea3",
+   "id": "fbe9a6e9",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3a1ad6f7",
+   "id": "7a7df390",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "12670a52",
+   "id": "a1466689",
    "metadata": {
     "tags": []
    },
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ce04d650",
+   "id": "3c20447b",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a371310",
+   "id": "2fe5c598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a23e3bd8",
+   "id": "c0b7d2c7",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78030829",
+   "id": "eeadaef8",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62ccfbda",
+   "id": "aa8e8c37",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e39964f1",
+   "id": "83d7323b",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b011a61b",
+   "id": "f9133eb2",
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "068db74c",
+   "id": "125eb1f2",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ee866e76",
+   "id": "7b3bfed5",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "920b9cab",
+   "id": "3b779acf",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f3e6a8d8",
+   "id": "630b228b",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "48fbbb78",
+   "id": "62e44442",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4290ea40",
+   "id": "488958f1",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "645628e4",
+   "id": "765832ac",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "686d9ac8",
+   "id": "029cdc49",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "413e564b",
+   "id": "6119c27e",
    "metadata": {},
    "outputs": [
     {
